cmake_minimum_required(VERSION 3.6)
project(LevelUp)

add_executable(LevelUp_3_1_0 "1 part/lvlup_3_1_0.c")

add_executable(LevelUp_3_2_0 "1 part/lvlup_3_2_0.c")

add_executable(LevelUp_3_3_0 "1 part/lvlup_3_3_0.c")

add_executable(LevelUp_3_4_0 "1 part/lvlup_3_4_0.c")

add_executable(LevelUp_3_5_0 "1 part/lvlup_3_5_0.c")

add_executable(LevelUp_3_6_0 "1 part/lvlup_3_6_0.c")

add_executable(LevelUp_3_7_0 "1 part/lvlup_3_7_0.c")

add_executable(LevelUp_3_8_0 "1 part/lvlup_3_8_0.c")

add_executable(LevelUp_3_9_0 "1 part/lvlup_3_9_0.c")

add_executable(LevelUp_3_10_0 "1 part/lvlup_3_10_0.c")

add_executable(LevelUp_3_1_1 "2 part/lvlup_3_1_1.c")

add_executable(LevelUp_3_2_1 "2 part/lvlup_3_2_1.c")

add_executable(LevelUp_3_3_1 "2 part/lvlup_3_3_1.c")

add_executable(LevelUp_3_4_1 "2 part/lvlup_3_4_1.c")

add_executable(LevelUp_3_5_1 "2 part/lvlup_3_5_1.c")

add_executable(LevelUp_3_6_1 "2 part/lvlup_3_6_1.c")

add_executable(LevelUp_3_7_1 "2 part/lvlup_3_7_1.c")